correct link to admin panel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,8 @@
     \n
     •	Click your respective card from the home screen.
     \n
+    •   On the pop-up, click MORE\>\>\> and then click REGISTER.
+    \n
     •	Enter your personal details and click the submit button.
     \n
     •	Once your account has been approved by the administrator, you will be able to log in to your dashboard
